--- a/scss/common/global.scss
+++ b/scss/common/global.scss
@@ -1,4 +1,8 @@
- a:focus, a:active { text-decoration: none; outline: none; @include transition(all 300ms ease 0s); }
+@import "./minxi.scss";
+@import "./variables.scss";
+@import "./extend.scss";
+
+a:focus, a:active { text-decoration: none; outline: none; @include transition(all 300ms ease 0s); }
 input, select, textarea { outline: none; @include appearance( unset ); }
 input::-webkit-outer-spin-button, input::-webkit-inner-spin-button {
     @include appearance( none );
@@ -20,7 +24,7 @@ h2 {
     font-size: 36px;
 }
 .main { 
-    background: #f8f8f8;
+    background: black;
     padding: 150px 0;
 }
 .clear { clear: both; }
@@ -34,7 +38,7 @@ body {
 }
 .container {
     width: 900px;
-    background: #fff;
+    background: black;
     margin: 0 auto;
     @include box-shadow(0px 15px 16.83px 0.17px rgba(0, 0, 0, 0.05));
     @include border-radius(20px);
