--- a/scss/room/default.scss
+++ b/scss/room/default.scss
@@ -1,54 +1,240 @@
+@import "./_variables.scss";
+@import "./_placeholders.scss";
+@import "./_mixins.scss";
+
+* {
+  margin: 0;
+  padding: 0;
+}
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  font-family: 'Overlock', cursive;
+}
+
 .container {
   display: flex;
-  height: 50vw;
+  height: 100%;
 
+  //        Left-Container
+  // ===============================
   .left-container {
+    background: $left-container;
     flex: 1;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
   
     .header-left {
-      border: 0.5px solid black;
-      flex: 1;
+      border-bottom: 0.5px solid $border-color;
+      box-shadow: 0px 0px 6px;
+      @extend %header-bottom;
+
+      button {
+        background: $button-color;
+        border: none;
+        border-radius: 5%;
+        color: white;
+        padding: 0.3em 0.5em;
+        font-size: 1em;
+        cursor: pointer;
+
+        &:hover {
+          background: $button-color-hover;
+        }
+      }
     }
   
-    .users {
+    .users-container {
       flex: 8;
+      display: flex;
+      flex-direction: column;
+      // overflow-y: scroll;
+      overflow-y: hidden;
+
+      &:hover {
+        overflow-y: overlay;
+      }
+
+      .each-user {
+        display: flex;
+        align-items: center;
+        // border-bottom: 2px solid black;
+        padding: 1vw;
+        cursor: pointer;
+        transition: background 0.2s ease-in;
+
+        &:hover {
+          background: $user-hover;
+        }
+
+        .avatar {
+          align-self: flex-start;
+          border-radius: 50%;
+          background: $button-color;
+          cursor: pointer;
+          position: relative;
+          text-align: center;
+          
+          i {
+            color: white;
+            padding: 0.6vw;
+            font-size: 1.2vw;
+            margin: 0;
+          }
+        }
+
+        .name {
+          flex: 1;
+          display: flex;
+          align-items: center;
+
+          .username {
+            color: white;
+            margin-left: 1vw;
+          }
+
+          i {
+            color: $button-color;
+            font-size: 0.8vw;
+            margin: 0;
+            margin-left: auto;
+            justify-self: flex-end;
+          }
+        }
+      }
+    }
+    .users-container::-webkit-scrollbar { 
+      background-color: dark;
+      width: 0.6em;
+    }
+    .users-container::-webkit-scrollbar-track {
+      box-shadow: inset 0 0 0.1em $left-container; 
+      border-radius: 10px;
+    }
+    .users-container::-webkit-scrollbar-thumb {
+      background-color: $user-hover;
+    }
+    .users-container::-webkit-scrollbar-thumb:hover {
+      background-color: black;
     }
   
     .bottom-left {
-      border: 0.5px solid black;
-      flex: 1;
+      border-top: 0.5px solid $border-color;
+      box-shadow: 0px 0px 6px;
+      @extend %header-bottom;
+
+      .create-room {
+        border-radius: 50%;
+        background: $button-color;
+        padding: 0.6em;
+        cursor: pointer;
+
+        &:hover {
+          background: $button-color-hover;
+        }
+
+        i {
+          color: white;
+          font-size: 1.5em;
+          margin: 0;
+        }
+      }
     }
   }
-  
+
+  //        right-Container
+  // ===============================
   .right-container {
     flex: 3;
-    border: 1px solid black;
     display: flex;
     flex-direction: column;
+    position: relative;
   
     .header-right {
-      height: 5vw;
-      border: 0.5px solid black;
-      flex: 1;
+      border-bottom: 0.5px solid $border-color;
+      box-shadow: 6px 0px 6px;
+      @extend %header-bottom;
+
+      h2 {
+        color: $top-heading;
+        margin-right: auto;
+      }
     }
   
-    .messages {
+    .messages-container {
       flex: 8;
+      display: flex;
+      flex-direction: column;
+      padding: 0.5vw 1vw;
+      overflow-y: scroll;
+
+      .each-message {
+        display: flex;
+        margin-bottom: 1.5vw;
+
+        .avatar {
+          align-self: flex-start;
+          border-radius: 50%;
+          background: $button-color;
+          cursor: pointer;
+          position: relative;
+          text-align: center;
+          
+          i {
+            color: white;
+            padding: 1vw;
+            margin: 0;
+          }
+        }
+        .message {
+          display: flex;
+          flex-direction: column;
+          margin: 0 1vw;
+
+          .username {
+            font-weight: bold;
+            margin-bottom: .3vw;
+          }
+          .text {
+            // line-height: 1.5vw;
+          }
+        }
+      }
     }
   
     .bottom-right {
-      border: 0.5px solid black;
-      flex: 1;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      border-top: 0.5px solid $border-color;
+      box-shadow: 6px 0px 6px;
+      background: #EFEEF7;
+      @extend %header-bottom;
 
+      i {
+        font-size: 1.7em;
+      }
       input {
-        flex: 1;
+        width: 90%;
+        font-size: 1em;
+        padding: .5em;
+        outline: none;
+        margin-right: .8em;
+      }
+      button {
+        border: none;
+        background: none;
       }
     }
+  }
+}
+
+i {
+  font-size: 1.5vw;
+  color: $icon-color;
+  margin-right: .8em;
+  cursor: pointer;
+
+  &:hover {
+    color: $left-container;
   }
 }
