--- a/scss/room/default.scss
+++ b/scss/room/default.scss
@@ -5,6 +5,7 @@
 * {
   margin: 0;
   padding: 0;
+  list-style: none;
 }
 html {
   height: 100%;
@@ -50,6 +51,7 @@ body {
       flex: 8;
       display: flex;
       flex-direction: column;
+      // max-width: 20vw;
       // overflow-y: scroll;
       overflow-y: hidden;
 
@@ -169,10 +171,12 @@ body {
       flex-direction: column;
       padding: 0.5vw 1vw;
       overflow-y: scroll;
+      // max-width: 80vw;
 
       .each-message {
         display: flex;
         margin-bottom: 1.5vw;
+        position: relative;
 
         .avatar {
           align-self: flex-start;
@@ -192,14 +196,28 @@ body {
           display: flex;
           flex-direction: column;
           margin: 0 1vw;
+          width: 100%;
 
-          .username {
-            font-weight: bold;
-            margin-bottom: .3vw;
+          .name-time {
+            display: flex;
+            align-items: center;
+
+            .username {
+              font-weight: bold;
+              margin-bottom: .3vw;
+            }
+            span {
+              margin-left: 2%;
+              font-size: 80%;
+              color: grey;
+            }
           }
           .text {
             // line-height: 1.5vw;
           }
+        }
+        .time {
+          align-self: center;
         }
       }
     }
