--- a/scss/room/default.css
+++ b/scss/room/default.css
@@ -320,12 +320,38 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
 }
 
-.container .right-container .header-right h3 {
+.container .right-container .header-right input {
+  -webkit-box-flex: 3;
+      -ms-flex: 3;
+          flex: 3;
+  outline: none;
+  padding: 0.5em;
+  margin-left: 2em;
+  margin-right: 0.2em;
+  background: #1E1162;
+  color: white;
+  border: 1px solid #727272;
+}
+
+.container .right-container .header-right input:focus {
+  border: 1px solid #EFEEF7;
+}
+
+.container .right-container .header-right button {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  border: none;
+  background: none;
+}
+
+.container .right-container .header-right button i {
+  font-size: 1.5em;
+}
+
+.container .right-container .header-right button i:hover {
   color: white;
 }
 
@@ -406,6 +432,10 @@ i {
 
 i:hover {
   color: #261771;
+}
+
+button {
+  outline: none;
 }
 
 .users-container::-webkit-scrollbar, .rooms-container::-webkit-scrollbar {
